k8s/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: taxi-rio
  labels:
    app.kubernetes.io/part-of: taxi-rio
    environment: dev
